Update feedback and fixed story tips white space issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -560,11 +560,11 @@ main .section.highlight {
   padding-top: 40px;
 }
 
-[lang="en"] .story-tips .section:first-of-type .default-content-wrapper {
+[lang="en"] .story-tips .section:first-of-type .default-content-wrapper ul{
   white-space: pre-line;
 }
 
-[lang="ms"] .story-tips .section:first-of-type .default-content-wrapper {
+[lang="ms"] .story-tips .section:first-of-type .default-content-wrapper{
   padding-bottom: 0;
 }
 
